--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,8 @@
     <string name="reviewContent">content</string>
     <string name="reviewId">id</string>
     <string name="review_endpoint">reviews</string>
+    <string name="trailers_endpoint">videos</string>
+    <string name="trailerId">id</string>
+    <string name="trailerName">name</string>
+    <string name="trailerKey">key</string>
 </resources>
