Reviews are now showing fine, except missing trailer images

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="trailerId">id</string>
     <string name="trailerName">name</string>
     <string name="trailerKey">key</string>
+    <string name="trailerType">type</string>
 </resources>
