Trailers work in progress, player icon displayed but not playing video yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="trailerName">name</string>
     <string name="trailerKey">key</string>
     <string name="trailerType">type</string>
+    <string name="trailerTypeisTrailer">Trailer</string>
 </resources>
